[package]
name = "agent-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Security components for the DCMaar agent including mTLS and secrets management"

[dependencies]
aes-gcm = { version = "0.10", features = ["aes", "std"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.21"
hex = "0.4"
rand = { workspace = true }
rcgen = { workspace = true }
ring = "0.17"
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
secrecy = { version = "0.8", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.25"
tonic = { workspace = true }
tracing = { workspace = true }
webpki = { workspace = true }

# Platform-specific deps for keychain access
[target.'cfg(unix)'.dependencies]
keyring = { version = "2.0", optional = true }

[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1.0", features = ["full"] }
